# Moltric

./: README.md  cli.py  pyproject.toml
benchmarking/: compare_methods_assume_homonuclear.py
examples/: fromFujioka_C10H9_sorted_19atoms.xyz  fromFujioka_CH.indene_19atoms.xyz  fromFujioka_CH.indene_sorted_19atoms.xyz  fromFujioka_H2CCH2.CCph_sorted_19atoms.xyz  fromFujioka_H3CS_5atoms.xyz  fromFujioka_H5CBr_7atoms.xyz  fromFujioka_ionicliquid_PBC_205atoms.xyz  fromFujioka_ionicliquid_sorted_PBC_205atoms.xyz  fromFujioka_neoncluster_180atoms.xyz  fromFujioka_neoncluster_20atoms.xyz  fromFujioka_neoncluster_40atoms.xyz  fromFujioka_neoncluster_80atoms.xyz  fromOTmol_fggtripeptide_37atoms.xyz  fromOTmol_neoncluster_1000atoms.xyz  fromOTmol_neoncluster_100atoms.xyz  fromOTmol_neoncluster_10atoms.xyz  fromOTmol_neoncluster_150atoms.xyz  fromOTmol_neoncluster_200atoms.xyz  fromOTmol_neoncluster_500atoms.xyz  fromOTmol_neoncluster_50atoms.xyz  fromOTmol_s1maw1_17atoms.xyz  fromOTmol_watercluster_120atoms.xyz  fromOTmol_watercluster_12atoms.xyz  fromOTmol_watercluster_15atoms.xyz  fromOTmol_watercluster_180atoms.xyz  fromOTmol_watercluster_18atoms.xyz  fromOTmol_watercluster_21atoms.xyz  fromOTmol_watercluster_24atoms.xyz  fromOTmol_watercluster_27atoms.xyz  fromOTmol_watercluster_300atoms.xyz  fromOTmol_watercluster_30atoms.xyz  fromOTmol_watercluster_33atoms.xyz  fromOTmol_watercluster_36atoms.xyz  fromOTmol_watercluster_39atoms.xyz  fromOTmol_watercluster_42atoms.xyz  fromOTmol_watercluster_45atoms.xyz  fromOTmol_watercluster_48atoms.xyz  fromOTmol_watercluster_51atoms.xyz  (+8 more)
(+8 files in other folders)
