[build-system]
requires = ["setuptools>=61.0.0", "wheel", "ase", "scipy", "ot"]
build-backend = "setuptools.build_meta"

[project]
name = "moltric"
description = "Moltric Molecular Metric"
keywords = ["moleculardynamics", "initialsampling"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "moltric.__version__"}

[tool.setuptools]
packages = ["moltric"]
#py_modules = ["moltric"]

#[tool.setuptools.packages.find]
#where = ["."]  # list of folders that contain the packages (["."] by default)
#include = ["moltric"]  # package names should match these glob patterns (["*"] by default)
#exclude = ["*images*", "*examples*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.scripts]
moltric-cli = "moltric.cli:main"

[tool.setuptools.package-data]
myModule = ["images/*"]
